<resources>
    <string name="app_name">OnlinePaymentTracker</string>
    <string name="permission_txt">This app needs SMS and Notification permission to .</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="add_expense">Add Expense</string>
    <string name="enter_location">Enter location</string>
    <string name="location">Location (Optional)</string>
    <string name="enter_note">Enter note</string>
    <string name="expense_note">Expense Note</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="date_and_time">Date and Time (Time is optional)</string>
    <string name="enter_amount">Enter amount</string>
    <string name="amount">Amount</string>
    <string name="exit_app_toast">Press back again to exit</string>
    <string name="open_settings">Open Settings</string>
    <string name="need_permissions">Need Permissions</string>
    <string name="sms_permission">SMS Permission</string>
    <string name="sms_explanation_txt">This app requires SMS permission to automatically detect debit messages after you make a UPI payment. Don\'t worry, we\'ll only read and analyze messages related to your transactions for a seamless experience.</string>
    <string name="notification_explanation_txt">This app needs Notification permission to send you alerts after detecting debit messages following a UPI transaction. Stay updated with your transactions in real-time!</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="dummy_date">03-05-2024</string>
    <string name="dummy_time">11:06 Am</string>
    <string name="chai_cigarette">Chai cigarette</string>
    <string name="_02_19_2024">02-19-2024</string>
    <string name="_70">₹70</string>
</resources>