<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragment.AddExpenditureFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:padding="16dp"
        android:orientation="vertical">

        <!-- Amount Input -->
        <TextView
            android:id="@+id/text_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:paddingBottom="8dp"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:hint="@string/enter_amount"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date and Time Input -->
        <TextView
            android:id="@+id/text_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:paddingBottom="8dp"
            android:text="@string/date_and_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:fontFamily="@font/quicksand_medium"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/dummy_date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:fontFamily="@font/quicksand_medium"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@id/date_txt"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_time"
                android:fontFamily="@font/quicksand_medium"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@id/date_tv"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <!-- Expense Note Input -->
        <TextView
            android:id="@+id/text_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:paddingBottom="8dp"
            android:text="@string/expense_note"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_note"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="start"
                android:fontFamily="@font/quicksand_regular"
                android:hint="@string/enter_note" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Location Input -->
        <TextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:paddingBottom="8dp"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:hint="@string/enter_location" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_expense"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/add_expense"
        android:fontFamily="@font/quicksand_bold"
        app:cornerRadius="0dp"
        android:backgroundTint="?attr/colorPrimary"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"/>

</LinearLayout>
